# ai-examples

./: .gitignore  README.md
.github/workflows/: release.yml
blog-recommendation/: README.md  package-lock.json  package.json  runtime-config-template.toml  spin.toml
blog-recommendation-ts/: .gitignore  README.md  blog_list.txt  migrations.sql  package-lock.json  package.json  update_embeddings.sh
blog-recommendation-ts/src/: index.ts  utils.ts
code/: README.md
code-generator-rs/: README.md  cargo.toml
code-generator-rs/api/: Cargo.toml  spin.toml
code/api/: Cargo.toml
code/api/src/: lib.rs
code/client/: Cargo.toml
haiku-generator-assets/: dynamic.js  index.html
haiku-generator-rs/: Cargo.toml  README.md  spin.toml
haiku-generator-rs/src/: lib.rs
haiku-generator-ts/: README.md  package-lock.json  package.json  spin.toml
haiku-generator-ts/src/: index.js  index.ts
helloworld-py/: app.py  spin.toml
helloworld-rs/: Cargo.toml  runtime-config.toml  spin.toml
helloworld-rs/src/: lib.rs
helloworld-ts/: package-lock.json  package.json  runtime-config.toml  spin.toml
helloworld-ts/src/: index.ts
newsfeeder/: README.md  package.json  spin.toml
newsfeeder-ts/: README.md  newsfeeder.yaml  package-lock.json  package.json  tsconfig.json
newsfeeder-ts/src/: index.ts
newsfeeder/src/: index.ts
openapi-rs/: .gitignore  README.md  openapi.yml  spin.toml
openapi-rs/api/: Cargo.toml
openapi-rs/api/src/: lib.rs
openapi-rs/swagger-ui/: swagger-initializer.js
sentiment-analysis-assets/: dynamic.js
sentiment-analysis-go/: go.mod  go.sum  main.go  spin.toml
sentiment-analysis-py/: README.md  app.py  requirements.txt  spin.toml
sentiment-analysis-py-v2/: README.md  app.py  spin.toml
sentiment-analysis-rs/: Cargo.toml  README.md  spin.toml
sentiment-analysis-rs/assets/: dynamic.js  index.html
sentiment-analysis-rs/src/: lib.rs
sentiment-analysis-rust/: Cargo.toml  spin.toml
sentiment-analysis-rust/src/: lib.rs
sentiment-analysis-ts/: README.md  package-lock.json  package.json  runtime-config.toml  spin.toml
silly-walk/: README.md  spin.toml
silly-walk-ts/: README.md  package-lock.json  package.json
(+7 files in other folders)
