[package]
name = "haiku-generator-rs"
authors = ["tpmccallum <tim.mccallum@fermyon.com>"]
description = "An application that can write haiku poetry via Fermyon Serverless AI"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }

[workspace]
