[package]
name = "sentiment-analysis"
authors = ["Rajat Jindal <rajat.jindal@fermyon.com>"]
description = "A sentiment analysis API that demonstrates using LLM inference and KV stores together"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.5.0" }

[workspace]
