[package]
name = "code"
authors = ["Ryan Levick <me@ryanlevick.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "llm-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
